# buildsh

./: .gitignore  CHANGELOG.md  LICENSE  Makefile.am  README.md  bootstrap.sh  configure.ac  dev-init.sh  dev.sh  lint.sh
.github/workflows/: build.yml
src/: generator.c  generator.h  main.c  utils.c  utils.h
src/actions/: build.c  configure.c  install.c  post.c  source-setup.c
tests/: bootstrap.sh  build-dir.sh  build-options.sh  build.sh  configure-env.sh  configure-options.sh  extract-sources-from-archive.sh  install.sh  setup.sh  source-setup.sh  test-custom.sh  test-off-by-default.sh
tests/configure/: alias-prefix.sh  change-script-name.sh  custom-commands.sh  default-configure.sh  disabled.sh  errors.sh  from-file.sh  in-custom-dir.sh  options.sh  prefix-env.sh
tests/extract/: custom-archive-name.sh  extract-and-cd.sh
tests/general/: clear-from-file-buffers.expected.out  clear-from-file-buffers.sh
tests/install/: custom.sh  default-make-install.sh  destdir.sh  from-file.sh  make-install-vars.sh  sudo.sh
tests/post/: cleanup.sh  from-file-error-handling.sh  from-file.sh  post-install.sh
tests/source-setup/: build-dir.sh  from-file.sh  in-build-dir.sh  overflow-errors.sh  run-commands.sh
tests/test/: custom.sh  default-make-check.sh  default-off.sh  from-file.sh
